--- a/app/assets/styles/_style.scss
+++ b/app/assets/styles/_style.scss
@@ -335,3 +335,26 @@
 		margin: 30px 0;
 	}
 }
+
+// help-region
+
+.help-region {
+	background: url(../images/help-bg.png) no-repeat center top;
+	background-size: cover;
+	color: white;
+}
+
+.flex-block {
+	display: flex;
+}
+
+//responsive 767
+@include xs {
+	.grid-item {
+		width: 100%;
+	}
+	.flex-block {
+		display: block;
+	}
+
+}
