--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -1,4 +1,5 @@
-- var menus = [{text: 'About Us', link: '#'}, {text: 'What we do',link:"#",submenu: [{text: 'Item 1 ', link: '#',submenu: [{text: 'Item A', link: '#'}, {text: 'Item B', link: '#'}, {text: 'Item C', link: '#'}, {text: 'Item D', link: '#'}]}, {text: 'Item 2', link: '#'}, {text: 'Item 3', link: '#'}, {text: 'Item 4', link: '#'}, {text: 'Item 5', link: '#'}] }, {text: 'Industry Trends', link:"#"}, {text: 'Insights', link: '#'},{text: 'Consultations', link: '#'},{text: 'Contact', link: 'contact.html'}];
+- var menus = [{text: 'About Us', link: '#'}, {text: 'What we do',link:"#",submenu: [{text: 'Item 1 ', link: '#',submenu: [{text: 'Item A', link: '#'}, {text: 'Item B', link: '#'}, {text: 'Item C', link: '#'}, {text: 'Item D', link: '#'}]}, {text: 'Item 2', link: '#',submenu: [{text: 'Item A', link: '#'}, {text: 'Item B', link: '#'}, {text: 'Item C', link: '#'}, {text: 'Item D', link: '#'}]}, {text: 'Item 3', link: '#',submenu: [{text: 'Item A', link: '#'}, {text: 'Item B', link: '#'}, {text: 'Item C', link: '#'}, {text: 'Item D', link: '#'}]}, {text: 'Item 4', link: '#',submenu: [{text: 'Item A', link: '#'}, {text: 'Item B', link: '#'}, {text: 'Item C', link: '#'}, {text: 'Item D', link: '#'}]}, {text: 'Item 5', link: '#',submenu: [{text: 'Item A', link: '#'}, {text: 'Item B', link: '#'}, {text: 'Item C', link: '#'}, {text: 'Item D', link: '#'}]}] }, {text: 'Industry Trends', link:"#"}, {text: 'Insights', link: '#'},{text: 'Consultations', link: '#'},{text: 'Contact', link: 'contact.html'}];
+
 
 header.header#header
 	nav.navbar#slide-nav
@@ -19,10 +20,15 @@ header.header#header
 							if value.submenu
 								li.menu-item.dropdown.parent
 									a(data-toggle="dropdown" href=value.link)= value.text
-									ul.dropdown-menu.sub-menu
+									ul.dropdown-menu.sub-menu.level1
 										each subvalue in value.submenu
 											li.menu-item
 												a(href=subvalue.link)= subvalue.text
+												if subvalue.submenu
+													ul.sub-menu.level2
+														each subvalue1 in subvalue.submenu
+															li.menu-item
+																a(href=subvalue1.link)= subvalue1.text
 							else
 								li.menu-item
 									if selected === value.link
