--- a/app/assets/styles/_variables.scss
+++ b/app/assets/styles/_variables.scss
@@ -26,3 +26,6 @@ $text-color: $light-grey;
 $menu-color: #58595b;
 $link-color: $brand-color;
 $font-base: 14px;
+$bg-menu:#f7f5f5;
+$border-menu:#c7c6c6;
+
