--- a/app/assets/styles/_header.scss
+++ b/app/assets/styles/_header.scss
@@ -1,11 +1,16 @@
 #header {
-	padding: 30px 0;
+	background:$white;
+	
 	.navbar {
 		margin: 0;
+		border:none;
 	}
 	.navbar-brand {
 		padding-top: 0;
 		padding-bottom: 0;
 
+	}
+	.navbar-header{
+		padding:30px 0 30px 45px;
 	}
 }
