--- a/app/assets/styles/_navigation.scss
+++ b/app/assets/styles/_navigation.scss
@@ -1,27 +1,73 @@
+#menu_nav{
+	display: inline-block!important;
+	float:right;
+	padding:0 30px 0 0;
+}
 .navbar-nav {
 	li a {
 		color: $menu-color; 
-	}
-	.dropdown-menu {
-		min-width: 200px;
-		li a{
-			&:hover,&:focus,&:active {
-				background: $link-color;
-				color: white; 
-			}
+		font-weight: $semi-bold;
+		&:hover,&:focus{
+			background:none;
+			color:$link-color;
 		}
 	}
+	.dropdown-menu {
+		width:100%;
+		padding:35px 0 50px;
+		> ul{
+			max-width:1080px;
+			margin:0 auto;
+			> li{
+				width:20%;
+				padding-right:50px;
+				float:left;
+				> a{
+					text-transform: uppercase;
+					border-bottom: 1px solid $border-menu;
+					font-weight: $semi-bold;
+					padding:9px 0;
+					display: block;
+					margin-bottom: 20px;
+					&:hover,&:focus,&:active {
+						color: $link-color;
+					}
+				}
+				> ul{
+					li{
+						display: block;
+						margin-bottom:15px;
+
+						a{
+							font-weight: $regular;
+						}
+					}
+				}
+			}
+		}
+		
+	}
 	> li {
-		> a {
-			padding: 15px 17px;
-			&.current {
-				color: $link-color;
+		padding:0;
+		position: static;
+		&.parent{
+			> .sub-menu{
+				background:$bg-menu;
+				width:100%;
+				border:none;
+				box-shadow: none;
+				border-radius: 0;
+			}
+		}
+		&.open{
+			> a{
 				position: relative;
+				background:none;
 				&:after {
 					content:"";
 					display: block;
 					width: 0;  
-					bottom: -31px;
+					bottom: 0;
 					left: 50%;
 					position: absolute;
 					@include translateX(-50%);
@@ -30,6 +76,13 @@
 					border-right: 14px solid transparent;
 					border-bottom: 14px solid $link-color;
 				}
+			}
+		}
+		> a {
+			padding: 46px 17px;
+			&:hover,&:focus,&:active {
+				background:none!important;
+				color:$menu-color!important;
 			}
 		}
 	}
