--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -1,11 +1,13 @@
 @import "mixin.scss";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+//@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 body {
     font-family: 'Open Sans' , helvetica,Arial,sans-serif;
     color: $text-color;
     font-size: $font-base;
     background: $dark-grey;
     font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 
@@ -42,30 +44,30 @@ h1,
 h2,
 .h2 {
     font-size: 36px;
-    font-weight: 500;
+    font-weight: 300;
 }
 
 h3,
 .h3 {
     font-size: 36px;
-    font-weight: 500;
+    font-weight: 300;
     margin: 0 0 20px;
 }
 
 h4,
 .h4 {
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 300;
 }
 
 h5,
 .h5 {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 300;
 }
 
 h6,
-.h6 {font-weight: 500;}
+.h6 {font-weight: 300;}
 
 
 img {
