--- a/app/assets/styles/_style.scss
+++ b/app/assets/styles/_style.scss
@@ -7,7 +7,29 @@
 		float: right;
 		max-width: 560px;
 		text-align: right;
-		font-size: 32px;
+		margin-top: -42px;
+		p {
+			line-height: 1.4; 
+			font-size: 32px;
+			margin-bottom: 55px;
+		}
+		.findmore {
+			font-size: 18px;
+			font-weight: 600;
+			text-transform: uppercase;
+			color: $link-color;
+			position: relative;
+			&:after {
+				content :"";
+				display: block;
+				height: 4px;
+				width: 33%;
+				background: $link-color;
+				right: 0;
+				position: absolute;
+				bottom: -22px;
+			}
+		}
 	}
 }
 
@@ -336,12 +358,72 @@
 	}
 }
 
+
+
 // help-region
 
 .help-region {
 	background: url(../images/help-bg.png) no-repeat center top;
 	background-size: cover;
 	color: white;
+
+	.nav-tabs {
+		max-width: 1135px;
+		margin: 68px auto 38px;
+	}
+	.text-content {
+		ul {
+			margin: 0;
+		}
+		
+	}
+	.tab-content {
+		max-width: 1472px;
+		margin: 0 auto;
+	}
+	.nav-tabs {
+		li.active:after {
+			content:"";
+			display: block;
+			width: 0;  
+			bottom: -38px;
+			left: 50%;
+			position: absolute;
+			@include translateX(-50%);
+			height: 0; 
+			border-left: 20px solid transparent;
+			border-right: 20px solid transparent;
+			border-bottom: 20px solid $white;
+		}
+	}
+	.slick-prev, .slick-next {
+		bottom: 60px;
+		right: 40px;
+		top: auto;
+		@include transform(0,0);
+	}
+	.slick-prev {
+		left: auto;
+		right: 80px;
+	}
+}
+
+.help-sticker {
+	.help-slicker-content {
+		position: relative;
+		max-height: 458px;
+		text-align: right;
+
+	}
+	.text {
+		font-size: 30px;
+		color: $white;
+		position: absolute;
+		right: 40px;
+		max-width: 346px;
+		bottom: 80px;
+	}
+	
 }
 
 .flex-block {
