--- a/app/index.pug
+++ b/app/index.pug
@@ -1,8 +1,8 @@
 extends layouts/default
 block content
 	include includes/hero.pug
-	section.help-region
-		.container
+	section.section.help-region
+		.container-fluid
 			.row
 				.col-xs-12
 					h3 How can we help you today?
@@ -10,61 +10,76 @@ block content
 						ul.nav.nav-tabs
 							li.active
 								a(data-toggle="tab" href="#employers")
+									img(src="assets/images/employers-img.png" class="icon")
 									| employers
 							li
 								a(data-toggle="tab" href="#employees")
+									img(src="assets/images/employees-img.png" class="icon")
 									| Employess
 							li
 								a(data-toggle="tab" href="#RTOs")
+									img(src="assets/images/rtos-img.png" class="icon")
 									| RTOs
 							li
 								a(data-toggle="tab" href="#associations")
+									img(src="assets/images/associations-img.png" class="icon")
 									| Associations
 							li
 								a(data-toggle="tab" href="#career-advisors")
+									img(src="assets/images/career-advisors-img.png" class="icon")
 									| Carrer Advisors
 						div.tab-content
 							div#employers.tab-pane.fade.in.active
-								div.col-xs-12.col-md-4
-									.help-sticker
-										div
-											img(src="assets/images/help-img01.png" alt="")
-											p Helping build a skilled workforce for Territory businesses
-										div
-											img(src="assets/images/help-img01.png" alt="")
-											p Helping build a skilled workforce for Territory businesses
-								div.col-xs-12.col-md-4
-									.text-content
-										h3 I’M LOOKING TO...
-										ul
-											li 
-												a(href="")
-													| Employ migrant workers
-											li 
-												a(href="")
-													| Get help with recruitment and retention
-											li 
-												a(href="")
-													| Find training opportunities for my staff
-											li 
-												a(href="")
-													| List a job as high demand
-								div.col-xs-12.col-md-4
-									.contact-info
-										.media
-											.media-left.media-middle
-												img(class="media-object" src="assets/images/contact01.png" alt="" )
-											.media-body
-												.text
-													p Learn more about the value of VET in the workplace.
-													a.more(href="")
-										.media
-											.media-left.media-middle
-												img(class="media-object" src="assets/images/contact02.png" alt="")
-											.media-body
-												.text
-													p Improve your business.Talk to an Industry Engagement Officer today.
-													a.more(href="")  
+								.row.flex-block
+									div.col-xs-12.col-md-4
+										.help-sticker
+											div
+												.help-slicker-content
+													.img
+														img(src="assets/images/help-img01.png" alt="")
+													.text 
+														p Helping build a skilled workforce for Territory businesses
+											div
+												.help-slicker-content
+													.img
+														img(src="assets/images/help-img01.png" alt="")
+													.text 
+														p Helping build a skilled workforce for Territory businesses
+									div.col-xs-12.col-md-4
+										.text-content
+											h3 I’M LOOKING TO...
+											ul
+												li 
+													a(href="#")
+														| Employ migrant workers
+												li 
+													a(href="#")
+														| Get help with recruitment and retention
+												li 
+													a(href="#")
+														| Find training opportunities for my staff
+												li 
+													a(href="#")
+														| List a job as high demand
+												li
+													a(href="#")
+														| Find skilled workers
+									div.col-xs-12.col-md-4
+										.contact-info
+											.media
+												.media-left.media-middle
+													img(class="media-object" src="assets/images/contact01.png" alt="" )
+												.media-body
+													.text
+														p Learn more about the value of VET in the workplace.
+														a.more(href="#")
+											.media
+												.media-left.media-middle
+													img(class="media-object" src="assets/images/contact02.png" alt="")
+												.media-body
+													.text
+														p Improve your business.Talk to an Industry Engagement Officer today.
+														a.more(href="#")  
 
 
 							div#employees.tab-pane.fade
@@ -81,16 +96,16 @@ block content
 										h3 I’M LOOKING TO...
 										ul
 											li 
-												a(href="")
+												a(href="#")
 													| Employ migrant workers
 											li 
-												a(href="")
+												a(href="#")
 													| Get help with recruitment and retention
 											li 
-												a(href="")
+												a(href="#")
 													| Find training opportunities for my staff
 											li 
-												a(href="")
+												a(href="#")
 													| List a job as high demand
 								div.col-xs-12.col-md-4
 									.contact-info
@@ -100,14 +115,14 @@ block content
 											.media-body
 												.text
 													p Learn more about the value of VET in the workplace.
-													a.more(href="")
+													a.more(href="#")
 										.media
 											.media-left.media-middle
 												img(class="media-object" src="assets/images/contact02.png" alt="")
 											.media-body
 												.text
 													p Improve your business.Talk to an Industry Engagement Officer today.
-													a.more(href="")
+													a.more(href="#")
 							div#RTOs.tab-pane.fade
 								div.col-xs-12.col-md-4
 									.help-sticker
@@ -122,16 +137,16 @@ block content
 										h3 I’M LOOKING TO...
 										ul
 											li 
-												a(href="")
+												a(href="#")
 													| Employ migrant workers
 											li 
-												a(href="")
+												a(href="#")
 													| Get help with recruitment and retention
 											li 
-												a(href="")
+												a(href="#")
 													| Find training opportunities for my staff
 											li 
-												a(href="")
+												a(href="#")
 													| List a job as high demand
 								div.col-xs-12.col-md-4
 									.contact-info
@@ -141,14 +156,14 @@ block content
 											.media-body
 												.text
 													p Learn more about the value of VET in the workplace.
-													a.more(href="")
+													a.more(href="#")
 										.media
 											.media-left.media-middle
 												img(class="media-object" src="assets/images/contact02.png" alt="")
 											.media-body
 												.text
 													p Improve your business.Talk to an Industry Engagement Officer today.
-													a.more(href="")
+													a.more(href="#")
 							div#associations.tab-pane.fade
 								div.col-xs-12.col-md-4
 									.help-sticker
@@ -163,16 +178,16 @@ block content
 										h3 I’M LOOKING TO...
 										ul
 											li 
-												a(href="")
+												a(href="#")
 													| Employ migrant workers
 											li 
-												a(href="")
+												a(href="#")
 													| Get help with recruitment and retention
 											li 
-												a(href="")
+												a(href="#")
 													| Find training opportunities for my staff
 											li 
-												a(href="")
+												a(href="#")
 													| List a job as high demand
 								div.col-xs-12.col-md-4
 									.contact-info
@@ -182,14 +197,14 @@ block content
 											.media-body
 												.text
 													p Learn more about the value of VET in the workplace.
-													a.more(href="")
+													a.more(href="#")
 										.media
 											.media-left.media-middle
 												img(class="media-object" src="assets/images/contact02.png" alt="")
 											.media-body
 												.text
 													p Improve your business.Talk to an Industry Engagement Officer today.
-													a.more(href="")
+													a.more(href="#")
 							div#career-advisors.tab-pane.fade
 								div.col-xs-12.col-md-4
 									.help-sticker
@@ -204,16 +219,16 @@ block content
 										h3 I’M LOOKING TO...
 										ul
 											li 
-												a(href="")
+												a(href="#")
 													| Employ migrant workers
 											li 
-												a(href="")
+												a(href="#")
 													| Get help with recruitment and retention
 											li 
-												a(href="")
+												a(href="#")
 													| Find training opportunities for my staff
 											li 
-												a(href="")
+												a(href="#")
 													| List a job as high demand
 								div.col-xs-12.col-md-4
 									.contact-info
@@ -223,23 +238,23 @@ block content
 											.media-body
 												.text
 													p Learn more about the value of VET in the workplace.
-													a.more(href="")
+													a.more(href="#")
 										.media
 											.media-left.media-middle
 												img(class="media-object" src="assets/images/contact02.png" alt="")
 											.media-body
 												.text
 													p Improve your business.Talk to an Industry Engagement Officer today.
-													a.more(href="")
+													a.more(href="#")
 
 
-	section.new-block#insights
+	section.section.new-block#insights
 		.container
 			.row
 				.col-xs-12.col-sm-12
 					h3 Insights
 					include includes/region-insights.pug
-	section.consultants#consultants
+	section.section.consultants#consultants
 		.container
 			.row
 				.col-xs-12
