--- a/app/includes/head.pug
+++ b/app/includes/head.pug
@@ -10,7 +10,7 @@ head
 	// bower:css
 	// endbower
 	// endbuild
-
+	link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700')
 	// build:css assets/styles/main.css
 	link(rel='stylesheet' href='assets/styles/bootstrap.css')
 	link(rel='stylesheet' href='bower_components/slick-carousel/slick/slick.css')
